<resources>
    <string name="app_name">brewery-finder</string>
    <string name="app_label">brewery-finder</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main">title_activity_main</string>

    <string name="title">CIT Brewery</string>

    <string name="bem_vindo_a">Bem-Vindo(a)!\nEncontre as melhores Cervejarias!</string>

    <string name="use_minha_l">use minha localização</string>

    <string name="search_hint">Busque por local</string>

    <string name="as_10_mais_">As 10 mais bem avaliadas</string>

    <string name="some_id">5,0</string>

    <string name="description">Pub</string>

    <string name="description_distance">0,9km</string>
    <string name="title_activity_no_search">NoSearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>