<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/brewery_card"
        android:layout_width="140dp"
        android:layout_height="234dp"
        android:layout_marginEnd="12dp"
        android:elevation="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageBrewery"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:src="@drawable/paddy_s_irish_pub_1" />

        <TextView
            android:id="@+id/nameBrewery"
            android:layout_width="83dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="128dp"
            android:lineHeight="24dp"
            android:text="Cervejaria A"
            android:textAppearance="@style/title_card"
            android:textFontWeight="500" />

        <ImageView
            android:id="@+id/iconBrewery"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="153dp"
            android:src="@drawable/star_24px" />

        <TextView
            android:id="@+id/rateBrewery"
            android:layout_width="83dp"
            android:layout_height="24dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="153dp"
            android:lineHeight="14px"
            android:lineSpacingExtra="-2sp"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            android:textFontWeight="400" />

        <TextView
            android:id="@+id/descritpionBrewery"
            android:layout_width="83dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="182dp"
            android:lineSpacingExtra="-2sp"
            android:text="@string/description"
            android:textAppearance="@style/description" />

        <TextView
            android:id="@+id/distanceBrewery"
            android:layout_width="83dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="208dp"
            android:lineSpacingExtra="-2sp"
            android:text="@string/description_distance"
            android:textAppearance="@style/description" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>