<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".home.HomeActivity">

        <!-- TOP APP BARS -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:background="@color/top_app_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Toolbar-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="48dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:padding="4dp"
                    android:src="@drawable/start_slot"
                    app:backgroundTint="#00FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageButton>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="248dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="56dp"
                    android:layout_weight="4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:layout_marginTop="18dp"
                        android:gravity="center_vertical"
                        android:text="@string/title"
                        android:textAppearance="@style/title"
                        android:textFontWeight="400">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/icon_button_star"
                        app:backgroundTint="#00FFFFFF">

                    </ImageButton>

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/icon_button_heart"
                        app:backgroundTint="#00FFFFFF">

                    </ImageButton>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- HEADER -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/background_header"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- bem vindo  -->
            <TextView
                android:id="@+id/bem_vindo_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:gravity="center_vertical"
                android:text="@string/bem_vindo_a"
                android:textAppearance="@style/bem_vindo_a"
                android:textFontWeight="500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- search bar-->
            <SearchView
                android:id="@+id/search_bar"
                android:layout_width="376dp"
                android:layout_height="56dp"
                android:layout_marginTop="77dp"
                android:background="@drawable/search_bar"
                android:queryHint="@string/search_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </SearchView>

            <!-- location-->
            <LinearLayout
                android:layout_width="201dp"
                android:layout_height="24dp"
                android:layout_marginTop="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/icon_maps_m"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/my_location_24px"
                    app:backgroundTint="#00FFFFFF">

                </ImageButton>

                <TextView
                    android:id="@+id/use_minha_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:lineHeight="28.75px"
                    android:text="@string/use_minha_l"
                    android:textAppearance="@style/use_minha_l"
                    android:textFontWeight="300" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- CARROUSEL -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:layout_marginTop="324dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- As 10 mais bem avaliadas -->
            <TextView
                android:id="@+id/as_10_mais_"
                android:layout_width="328dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:lineHeight="21.09px"
                android:text="@string/as_10_mais_"
                android:textAppearance="@style/as_10_mais_"
                android:textFontWeight="500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/brewery_card"
                android:layout_width="140dp"
                android:layout_height="234dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="20dp"
                android:elevation="2dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/as_10_mais_">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    android:src="@drawable/paddy_s_irish_pub_1" />

                <TextView
                    android:layout_width="83dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="128dp"
                    android:lineHeight="24px"
                    android:text="Cervejaria A"
                    android:textAppearance="@style/title_card"
                    android:textFontWeight="500" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="153dp"
                    android:src="@drawable/star_24px" />

                <TextView
                    android:layout_width="83dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="153dp"
                    android:lineHeight="14px"
                    android:lineSpacingExtra="-2sp"
                    android:text="@string/some_id"
                    android:textAppearance="@style/some_id"
                    android:textFontWeight="400" />

                <TextView
                    android:layout_width="83dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="182dp"
                    android:lineSpacingExtra="-2sp"
                    android:text="@string/description"
                    android:textAppearance="@style/description" />

                <TextView
                    android:layout_width="83dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="208dp"
                    android:lineSpacingExtra="-2sp"
                    android:text="@string/description_distance"
                    android:textAppearance="@style/description" />

            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
